--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,16 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+config = "0.11"
+uuid = { version = "1", features = ["v4"] }
+chrono = "0.4.15"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
-version = "0.5.7"
+version = "0.8"
 default-features = false
 features = [
-    "runtime-actix-rustls",
+    "runtime-tokio-rustls",
     "macros",
     "postgres",
     "uuid",
