--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ serde = { version = "1", features = ["derive"]}
 config = "0.11"
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4.15"
+env_logger = "0.9"
+log = "0.4"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
